# beginner-python-course

./: beginner-python-course.code-workspace  pyproject.toml
lesson03/: meaning.py
lesson04/: data_types.py
lesson05/: rps.py
lesson06/: lists.py
lesson08/: loops.py
lesson10/: rps3.py
lesson11/: rps4.py  scope.py
lesson12/: closure.py
lesson13/: rps6.py
lesson14/: kansas.py  modules.py  rps7.py
lesson15/: rps8.py
lesson18/: classes.py
lesson19/: exceptions.py
lesson21/: weather.py
lesson22/: files.py  names.txt
